--- a/style/master.css
+++ b/style/master.css
@@ -9,6 +9,10 @@
     margin-top: -117px;
 }
 
+.nav-active {
+    background-color: rgba(0, 0, 0, .7);
+}
+
 .nav-btn {
     background-color: #fff;
     width: 15px;
@@ -126,3 +130,36 @@
 .hover-zoom-in:hover .fas {
     transform: scale(1);
 }
+
+@media screen and (max-width: 1024px) {
+    .article {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .article {
+        width: auto;
+        padding: 4rem 2rem 2rem;
+    }
+
+    .nav {
+        top: 0;
+        left: 0;
+        margin-top: 0;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        /* background-color: darkkhaki; */
+        z-index: 10;
+    }
+
+    .article-head {
+        text-align: center;
+    }
+}
+
+/* 圖片兩欄式 */
+/* .grid-3 {
+    grid-template-columns: repeat(2, 1fr);
+} */
