--- a/style/index.css
+++ b/style/index.css
@@ -81,3 +81,9 @@ body {
 .nav-btn-dreamweaver {
     background-color: #84c922;
 }
+
+@media screen and (max-width: 480px) {
+    .nav-li {
+        width: 50%;
+    }
+}
